--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           font-family: Arial;
         }
         </style>
-    <title>Weee!</title>
+    <title>Andrew Kobach</title>
 </head>
 
 <body>
