--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <aside><em>Visiting Research Scholar, UC San Diego, Department of Physics</em></aside>
         <aside><em>Manager of Data Science/Lead Data Scientist, Solera Inc.</em></aside>
         <br>
-        <aside>I'm a theoretical physicist, and I pay the bills by writing algorithms for a company sells products designed to help keep truck drivers safe.</aside>  
+        <aside>I'm a theoretical physicist, and I pay the bills by writing algorithms for a company that sells products to help keep truck drivers safe.</aside>  
         <br>
         I live in Milwaukee, WI.
     </header>
