--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="CV.pdf">Click here</a>
         
         <h2>Problems</h2>
-        <p>A collection of problems, for your enjoyment [More on the way!].</p>
+        <p>A collection of problems, for your enjoyment [More on the way! Email me if you want solutions.].</p>
         <a href="Leaky_Bucket.pdf">The Leaky Bucket</a>
 
         <h2>Miscellany</h2>
