--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         
         <h2>Problems</h2>
         <p>A collection of problems, for your enjoyment [More on the way! Email me if you want solutions.].</p>
-        <a href="Leaky_Bucket.pdf">The Leaky Bucket</a>
+        <a href="Leaky_Bucket.pdf">Leaky Bucket</a>
+        <p></p>
+        <a href="The_Gas_Guzzler.pdf">Gas Guzzler</a>
 
         <h2>Miscellany</h2>
         Sidney Coleman's <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>
