--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
-          font-family: Arial;
+          font-family: Garamond, serif;
         }
         </style>
     <title>Andrew Kobach</title>
@@ -18,7 +18,7 @@
         <aside><em>Visiting Research Scholar, UC San Diego, Department of Physics</em></aside>
         <aside><em>Manager of Data Science, Solera Inc.</em></aside>
         <br>
-        <aside>I'm a theoretical physicist, and I pay the bills by writing algorithms for a company that helps keep truck drivers safe.</aside>  
+        <aside>I'm a theoretical physicist, and I pay the bills by writing algorithms for a company that helps prevent vehicular collisions.</aside>  
         
     </header>
 
@@ -26,21 +26,38 @@
         <p>andrewkobach [at] gmail [dot] com</p>
 
         <h2>Research</h2>
-        <p>I am typically interested in problems related to quantum field theory. Sometimes I dabble in dynamical systems.</p>
+        <p>I am typically interested in problems related to quantum field theory. 
+            Sometimes I dabble in dynamical systems.
+            </p>
         <p>Here is a <a href="https://scholar.google.com/citations?user=p5aVZ2QAAAAJ&hl=en">list of my publications</a>
             </p>
+        <p>
+        Notable results:
+        <ol>
+            <li>There is a fundamental relationship in the Standard Model of particle physics between baryon number, lepton number, and the operator mass dimension: <strong>(B-L)/2 = d (mod 2)</strong> [<a href="https://arxiv.org/abs/1604.05726">hep-ph/1604.05726</a>]. </li>
+            <li>The phenomenon of neutrino oscillations in quantum field theory does not require neutrino wave packets, and neutrinos are emitted from the source at differnt times, contrary to popular lore [<a href="https://arxiv.org/abs/1711.07491">hep-ph/1711.07491</a>]. </li>
+            <li>The long-standing discrepancy between inclusive and exclusive determinations of <em>V<sub>cb</sub></em>, one of the fundamental parameters in the Standard Model, is due to the assumption of heavy quark effective field theory in the exclusive parameterization [<a href="https://arxiv.org/abs/1703.08170">hep-ph/1703.08170</a>]. </li>
+            <li>The correct operator basis for the Lagrangian of a heavy particle in an external field was debated for decades, but it can be unambiguously determined using advanced methods in abstract algebra [<a href="https://arxiv.org/abs/1704.00008">hep-ph/1704.00008</a>].</li>
+            <li>Analyticity and unitarity explain why lattice calculations of the semileptonic form factors of <em>B&#8594;D<sup>(*)</sup></em> and <em>B<sub>s</sub>&#8594;D<sub>s</sub><sup>(*)</sup></em> are similar within a few percent over the entire kinematic range  [<a href="https://arxiv.org/abs/1910.13024">hep-ph/1910.13024</a>]</li>
+        </ol>  
+        </p>
 
         <h2>CV</h2>
         <a href="CV.pdf">Click here</a>
         
         <h2>Problems</h2>
-        <p>A collection of problems, for your enjoyment [More on the way! Email me if you want solutions.].</p>
+        <p>Physics is like baseball - you can't learn it by only reading a book.  
+            The following is a collection of problems, focusing on underappreciated details and subtlties in theoretical physics. 
+            Email me if you want solutions.  
+            I am continuously writing these, so more to come!  
+        </p>
         <a href="Leaky_Bucket.pdf">Leaky Bucket</a>
         <p></p>
         <a href="The_Gas_Guzzler.pdf">Gas Guzzler</a>
 
         <h2>Miscellany</h2>
-        Sidney Coleman's <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>
+        A complete transcription of Sidney Coleman's lecture <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>, 
+        containing a forward from Prof. Howard Georgi (Harvard University), with permission from Diana Coleman.
 
         <blockquote cite="">"The problem problem isn't with quantum mechanics.  The problem is with us, stupid! "<br>
             - Sidney Coleman, probably 
