--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>
         Notable results:
         <ol>
-            <li>There is a fundamental relationship in the Standard Model of particle physics between baryon number, lepton number, and the operator mass dimension: <strong>(B-L)/2 = d (mod 2)</strong> [<a href="https://arxiv.org/abs/1604.05726">hep-ph/1604.05726</a>]. </li>
+            <li>There is a fundamental relationship in the Standard Model of particle physics between the operator's baryon number (B), lepton number (L), and classical mass dimension (d):<strong>(B-L)/2 = d (mod 2)</strong> [<a href="https://arxiv.org/abs/1604.05726">hep-ph/1604.05726</a>]. </li>
             <li>The phenomenon of neutrino oscillations in quantum field theory does not require neutrino wave packets, and neutrinos are emitted from the source at differnt times, contrary to popular lore [<a href="https://arxiv.org/abs/1711.07491">hep-ph/1711.07491</a>]. </li>
             <li>The long-standing discrepancy between inclusive and exclusive determinations of <em>V<sub>cb</sub></em>, one of the fundamental parameters in the Standard Model, disappears by removing the assumption of heavy quark effective field theory in the exclusive parameterization [<a href="https://arxiv.org/abs/1703.08170">hep-ph/1703.08170</a>]. </li>
             <li>The correct operator basis for the Lagrangian of a heavy particle in an external field was debated for decades, but it can be unambiguously determined using advanced methods in abstract algebra [<a href="https://arxiv.org/abs/1704.00008">hep-ph/1704.00008</a>].</li>
