--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <style>
         body {
           font-family: Garamond, serif;
-          width:920px;
+          width: 99%;
+          max-width: 600px
         }
         </style>
     <title>Andrew Kobach</title>
