--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </ol>  
         </p>
 
+
         <h2>Problems</h2>
         <p>Physics is like baseball - you can't learn it by only reading a book.  
             The following is a collection of problems, focusing on underappreciated details and subtlties in theoretical physics. 
@@ -56,6 +57,14 @@
         <a href="The_Gas_Guzzler.pdf">The Gas Guzzler</a>
         <p></p>
         <a href="Neutrino_Oscillations.pdf">The Quantum Mechanics of Neutrino Oscillations</a>
+
+
+        <h2>Patents</h2>
+        <ol>
+            <li><a href="https://patents.justia.com/patent/11600083"><em>Highly-accurate and self-adjusting imaging sensor auto-calibration for in-vehicle driver monitoring system or other system</em></a></li>
+            <li><a href="https://patents.justia.com/patent/20230136214"><em>Highly-accurate and self-adjusting image senor auto-calibration for in-vehicle advanced driver assistance system (ADAS) or other system</em></a></li>
+        </ol> 
+
 
         <h2>Miscellany</h2>
         A complete transcription of Sidney Coleman's lecture <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>, 
