--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <h2>Patents</h2>
         <ol>
             <li><a href="https://patents.justia.com/patent/11600083"><em>Highly-accurate and self-adjusting imaging sensor auto-calibration for in-vehicle driver monitoring system or other system</em></a></li>
-            <li><a href="https://patents.justia.com/patent/20230136214"><em>Highly-accurate and self-adjusting image senor auto-calibration for in-vehicle advanced driver assistance system (ADAS) or other system</em></a></li>
+            <li>[To be granted in 2025] <a href="https://patents.justia.com/patent/20230136214"><em>Highly-accurate and self-adjusting image senor auto-calibration for in-vehicle advanced driver assistance system (ADAS) or other system</em></a></li>
+            <li>[Pending] <a href="https://patents.justia.com/patent/20240362803"><em>Conversion of computer vision data into measurements for in-vehicle advanced driver assistance systems (ADAS) or other systems</em></a></li>
         </ol> 
 
 
