--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <h2>Problems</h2>
         <p>Physics is like playing the piano - you can't learn it by only reading a book.  
-            The following is a collection of problems, focusing on underappreciated details and subtlties in theoretical physics. 
+            The following is a collection of problems, focusing on underappreciated details and subtleties in theoretical physics. 
             Email me if you want solutions.  
             I am continuously writing these, so more to come!  
         </p>
