--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <h1>Andrew Kobach</h1>
 
         <aside><em>Visiting Research Scholar, UC San Diego, Department of Physics</em></aside>
-        <aside><em>Head of Data Science, Solera Inc.</em></aside>
+        <aside><em>Head of Data Science at Solera Fleet Solutions</em></aside>
         <br>
-        <aside>I'm a theoretical physicist, and I write algorithms for a company that helps prevent vehicular collisions.</aside>  
+        <aside>I'm a theoretical physicist, and I write algorithms for a company that helps prevent vehicular collisions.</aside>
+        <br>
+        <aside>I live in Milwaukee, WI.</aside>    
         
     </header>
 
@@ -47,10 +49,9 @@
 
 
         <h2>Problems with Morals</h2>
-        <p>Physics is like playing the piano - you can't learn it by only reading a book.  
-            The following is a collection of problems, focusing on underappreciated details and subtleties in theoretical physics. 
+        <p>The following is a collection of problems, focusing on underappreciated details and subtleties in theoretical physics. 
             Email me if you want solutions.  
-            I am continuously writing these, so more to come!  
+            I am continuously compiling these, so more to come!  
         </p>
         <a href="Leaky_Bucket.pdf">The Leaky Bucket</a>
         <p></p>
