changed title heading

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </p>
 
 
-        <h2>Problems with Morals</h2>
+        <h2>Problems</h2>
         <p>The following is a collection of problems, focusing on underappreciated details and subtleties in theoretical physics. 
             Email me if you want solutions.  
             I am continuously compiling these, so more to come!  
