--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Andrew Kobach</h1>
 
         <aside><em>Visiting Research Scholar, UC San Diego, Department of Physics</em></aside>
-        <aside><em>Head of Data Science at Solera Fleet Solutions</em></aside>
+        <aside><em>Head of Data Science and Algorithm Engineering at Solera Fleet Solutions</em></aside>
         <br>
         <aside>I'm a theoretical physicist, and I write algorithms for a company that helps prevent vehicular collisions.</aside>
         <br>
