--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         In March 2025, I won first place in a piano scholarship competition at the Wisconsin Conservatory of Music.
 
         <p></p>
+        In Summer 2012, I was one of 75 American delegates chosen by the Department of Energy to attend The Lindau Nobel Laureate Meeting dedicated to Physics.  During this meeting, the discovery of Higgs was announced.  
+
+
+        <p></p>
         A complete transcription of Sidney Coleman's lecture <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>, 
         containing a forward from Prof. Howard Georgi (Harvard University), with permission from Diana Coleman.
 
