--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         In March 2025, I won first place in a piano scholarship competition at the Wisconsin Conservatory of Music.
 
         <p></p>
-        In Summer 2012, I was one of 75 American delegates chosen by the Department of Energy to attend The Lindau Nobel Laureate Meeting dedicated to Physics.  During this meeting, the discovery of Higgs was announced.  
+        In Summer 2012, I was one of 75 American delegates chosen by the Department of Energy to attend The Lindau Nobel Laureate Meeting dedicated to Physics.  
+        During this meeting, the discovery of Higgs was announced.  
+        That night I ate dinner seated next to Martinus Veltman, and when I asked him about what he thought of the discovery.  Instead of being excited like everyone else, his response was: "Well...we'll see."
 
 
         <p></p>
