--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p></p>
         In Summer 2012, I was one of 75 American delegates chosen by the Department of Energy to attend The Lindau Nobel Laureate Meeting dedicated to Physics.  
         During this meeting, the discovery of Higgs was announced.  
-        That night I ate dinner seated next to Martinus Veltman, and when I asked him about what he thought of the discovery.  Instead of being excited like everyone else, his response was: "Well...we'll see."
+        That night I ate dinner seated next to Martinus Veltman, and when I asked him about what he thought of the discovery, instead of being excited like everyone else, his response was: "Well...we'll see."
 
 
         <p></p>
