added algebra exercises

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
         <h2>Problems</h2>
-        <p>The following is a collection of problems, focusing on underappreciated details and subtleties in theoretical physics. 
+        <p>The following is a collection of problems that focus on underappreciated details and subtleties in theoretical physics. 
             Email me if you want solutions.  
             I am continuously compiling these, so more to come!  
         </p>
@@ -61,6 +61,9 @@
 
 
         <h2>Miscellany</h2>
+        Proofs from my <a href="Algebra_Exercises.pdf">adventures in group theory</a>.
+
+        <p></p>
         <a href="https://patents.justia.com/inventor/andrew-c-kobach">Here is a list of my patents</a>  related to preventing vehicular collisions.
 
         <p></p>
@@ -70,7 +73,7 @@
         I attended The Lindau Nobel Laureate Meeting dedicated to Physics when the discovery of the Higgs boson was announced.  
 
         <p></p>
-        A complete transcription of Sidney Coleman's lecture <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>, 
+        A transcription of Sidney Coleman's lecture <a href="QMIYF.pdf">Quantum Mechanics In Your Face</a>, 
         containing a forward from Prof. Howard Georgi (Harvard University), with permission from Diana Coleman.
 
         <blockquote cite="">"The problem problem isn't with quantum mechanics.  The problem is with us, stupid! "<br>
